apply wilders smoothing